--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 body {
     box-sizing: border-box;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     height: 100vh;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     padding-top: 50px;
     font-family: 'Rubik', sans-serif;
-    align-items: center;
     background-color: rgb(120, 134, 170);
 }
 .container {
@@ -20,6 +19,15 @@ body {
     height: 80vh;
     flex-direction: column;
     margin: 0 auto;
+    align-items: center;
+}
+.containerTodo {
+    width: 350px;
+    background-color: lightgreen;
+    height: 100vh;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 .allQuestions {
@@ -75,4 +83,107 @@ h3 {
 .alwaysAnwser {
     margin-right: auto;
     padding: 0;
+}
+
+@media(max-width: 974px) {
+    body {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container {
+        width: 80%;
+        margin-top: 20px;
+    }
+    .boxContainer {
+
+        width: 100%;
+        height: 70px;
+        max-width: 520px;
+       
+    }
+    .boxContainerOpen {
+        height: 135px;
+        width: 100%;
+        margin: 15px auto;
+        padding: 30px;
+        border-radius: 8px;
+        flex-direction: column;
+        transition: all 0.5s ease-in-out;
+    }
+}
+@media(max-width: 710px) {
+    body {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container {
+        width: 85%;
+        height: 100vh;
+        margin-top: 20px;
+    }
+    .boxContainer {
+        width: 100%;
+        height: 90px;
+        max-width: 265px;
+       
+    }
+    .boxContainerOpen {
+        height: 175px;
+        width: 100%;
+        margin: 15px auto;
+        padding: 30px;
+        border-radius: 8px;
+        flex-direction: column;
+        transition: all 0.5s ease-in-out;
+    }
+}
+
+
+/* ------------- */
+
+.totalItem {
+ display: flex;
+ align-items: center;
+ margin-bottom: 13px;
+}
+.unorderedList {
+    padding: 0;
+    width: 230px;
+}
+.listItems {
+    list-style-type: none;
+}
+.listItems:hover {
+    cursor: pointer;
+    color: rgb(7, 148, 94);
+}
+.listBtn {
+    background-color: mediumaquamarine;
+    color: white;
+}
+.listBtn:hover {
+    cursor: pointer;
+}
+.delBtn {
+    border: 2px solid white;
+    background-color: mediumaquamarine;
+    font-size: 16px;
+    text-align: center;
+    padding: 4px;
+    width: 32px;
+    border-radius: 50%;
+}
+.delBtn:hover {
+    color: #fff;
+    background-color: rgb(230, 0, 0);
+}
+.delBtn:hover {
+    cursor: pointer;
+}
+.divItem {
+    margin: 0 auto;
+}
+
+.lineThru {
+    text-decoration: line-through 2px rgb(255, 255, 255);
 }
